--- a/paginas/personagens/style/personagens.css
+++ b/paginas/personagens/style/personagens.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;800&display=swap');
 @font-face {
     font-family: Fauna;
-    src: url('../fontes/Fauna.otf');
+    src: url('../style/Fauna.otf');
 }
-@font-face {
-    font-family: duna;
-    src: url('../fontes/Dune_Rise.otf');}
+
 
 :root {
     --marromEscuro:rgb(207, 194, 126);
@@ -24,8 +22,8 @@
 }
 
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background: var(--fundo);
     font-family: Poppins;
     color:white
@@ -33,7 +31,7 @@ body {
 header{
     height: 100px;
     width: 100%;
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -42,7 +40,7 @@ header{
 header nav{
     height: 50%;
     width: 90%;
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -66,4 +64,24 @@ header nav button{
 header nav button:hover{
   background-color: white;
   color: var(--fundoBox);
+}
+.container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.titulo{
+    font-family:"Fauna";
+    width: 90%;
+}
+.personagens{
+    font-family:"Fauna";
+    width: 90%;
+}
+.box{
+    width: 350px;
+    height: 300px;
+    background: #000;
 }
